<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#20b2aa"
    >

    
    <RelativeLayout 
        android:id="@+id/topHeader"
        android:orientation="vertical"
        android:minHeight="150dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_launcher"
    android:layout_centerInParent="true"
    
     />
        
        
    </RelativeLayout>
    
    
    
    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/login_layout_background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0.4"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="7dp"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#524c4c" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0.4"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="0dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#524c4c" />
        </LinearLayout>
    </LinearLayout>
           
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" 
            android:background="@drawable/login_button"
            android:text="@string/loginCaps"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#20b2aa"
            
            />
        
        <TextView 
            android:id="@+id/registerMember"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/forgot_password"
            />
        
        
    </LinearLayout>
    <TextView
         
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="Copyright of CBIT ( Center of Business Innovation and Training )"
                        android:textColor="#FFF"
                        android:textSize="14sp"
                        android:textStyle="bold" />

</LinearLayout>