<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20b2aa"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/topHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:orientation="vertical" >

                <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_launcher"
    android:layout_centerInParent="true"
    
     />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_layout_background"
                android:minHeight="120dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/fnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/fname"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/lnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/lname"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/userTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/lnameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/telephoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/telephone"
                        android:inputType="textPhonetic"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                
                      <LinearLayout
                    android:id="@+id/idnumberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/idEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="Enter National ID Number"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                
                      <LinearLayout
                    android:id="@+id/pinLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/pinEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="Enter Pin Number"
                        android:inputType="textPhonetic"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                

                <LinearLayout
                    android:id="@+id/telLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>


            </LinearLayout>



            <Spinner
                android:id="@+id/chamaID"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/chamas"
                 />
            <Spinner
                android:id="@+id/userLevel"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/userLevels"
                 />   
            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
               
                android:background="@drawable/login_button"
                android:text="@string/registerCaps"
                android:textColor="#20b2aa"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView 
            android:id="@+id/loginMember"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
             android:layout_marginBottom="45dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/login"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>