<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20b2aa"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

<RelativeLayout
        android:id="@+id/appName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#20b2aa"
        android:orientation="horizontal"
        android:paddingLeft="5dp" 
        android:paddingRight="7dp" 
        > 

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_keyboard_backspace_white_48dp" />

        <TextView
            android:id="@+id/listingHeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal" 
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="User Profile"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" /> 


        
    </RelativeLayout>

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_layout_background"
                android:minHeight="120dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/fnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/fname"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/userTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/lnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:hint="@string/lname"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"

                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>
              <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />

                <LinearLayout
                    android:id="@+id/usernameayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                
                              <LinearLayout
                    android:id="@+id/pinLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/pinEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
    
          
                        android:hint="enter your PIN Number"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                              <LinearLayout
                    android:id="@+id/idLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/idEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"


                        android:hint="enter National ID Number"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e5e5e5" />
                
                
                

                <LinearLayout
                    android:id="@+id/telLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/telEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"

                        android:hint="@string/telephone"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
    
                        android:paddingRight="5dp"
                        android:textColor="#524c4c" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_button"
                    android:text="Save"
                    android:textColor="#20b2aa"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/topHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical" >
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>